# AgIA

./: .dockerignore  LICENSE  README.md  agents.md  app_multi_agent.py  docker-compose.yml  pyproject.toml
.github/workflows/: packs-ci.yml
architecture_planning/: Dockerfile  README.md  architecture_planner.py  docker-compose.yml  pyproject.toml
architecture_planning/doc/: agents.md  architecture.md  runbook.md  security.md
devsecops/: Dockerfile  README.md  devsecops_platform.py  docker-compose.yml  pyproject.toml
devsecops/doc/: agents.md  architecture.md  runbook.md  security.md
devsecops_audit/: Dockerfile  README.md  devsecops_auditor.py  docker-compose.yml  pyproject.toml
devsecops_audit/doc/: agents.md  architecture.md  runbook.md  security.md
doc/: new-pack.md  repository.md  runbook.md  security.md
function_development/: Dockerfile  README.md  app_function_development.py  dev_agent_pipeline.py  docker-compose.yml  pyproject.toml
function_development/doc/: agents.md  architecture.md  runbook.md  security.md
function_development/stacks/: README.md
function_development/stacks/angular/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/aws/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/csharp-dotnet/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/javascript/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/nestjs/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/nextjs/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/nodejs/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/python/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/react/: best_practices.md  skills.md  testing.md  workflow.md
function_development/stacks/typescript/: best_practices.md  skills.md  testing.md  workflow.md
function_development/tests/: test_dev_agent_pipeline.py
incident_response/: Dockerfile  README.md
incident_response/doc/: agents.md  architecture.md  runbook.md  security.md
project_lifecycle/: Dockerfile  README.md  app_project_lifecycle.py  docker-compose.yml  pyproject.toml
project_lifecycle/doc/: agents.md  architecture.md  runbook.md  security.md
scripts/: validate_packs.py
skills/: documentation.md  testing.md  workflow.md
