[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agia-function-development"
version = "0.1.0"
description = "Local LangGraph pack for autonomous Python function development with self-correction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain-ollama==1.1.0",
  "langgraph==1.2.6",
  "pydantic==2.13.4",
  "pytest==8.4.1",
]

[project.scripts]
agia-function-development = "app_function_development:main"

[tool.setuptools]
py-modules = ["app_function_development", "dev_agent_pipeline"]
